fix giao dien ad min

--- a/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Nha_phat_hanh_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Nha_phat_hanh_Admin.html
@@ -26,55 +26,19 @@
        
 
     <div id="wrapper">
-    <nav class="navbar-default navbar-static-side" role="navigation">
-        <div class="sidebar-collapse">
-            <ul class="nav metismenu" id="side-menu">
-                <li class="nav-header">
-                    <div id="Th_Nguoi_dung"></div>  
-                </li>
-                <li>
-                    <a href="MH"><i class="fa fa-book"></i> <span class="nav-label">QUẢN LÝ SÁCH</span> <span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="MH_Chinh_Sach_Admin.html"><i class="fa fa-home"></i>TRANG CHỦ SÁCH</a></li>
-                        <li><a href=""><i class="fa fa-plus"></i>THÊM SÁCH</a></li>
-                        <li><a href=""><i class="fa fa-edit"></i>SỬA SÁCH</a></li>
-                        <li><a href=""><i class="fa fa-trash"></i>XÓA SÁCH</a></li>
-                        <li><a href=""><i class="fa fa-undo"></i>PHỤC HỒI SÁCH</a></li>
-                    </ul>
-                </li>
-                <li>
-                        <a href=""><i class="fa fa-list-alt"></i> <span class="nav-label">QUẢN LÝ THỂ LOẠI</span> <span class="fa arrow"></span></a>
-                        <ul class="nav nav-second-level collapse">
-                                <li><a href="MH_Chinh_The_loai_Admin.html"><i class="fa fa-home"></i>TRANG CHỦ THỂ LOẠI</a></li>
-                                <li><a href=""><i class="fa fa-plus"></i>THÊM THỂ LOẠI</a></li>
-                                <li><a href=""><i class="fa fa-edit"></i>SỬA THỂ LOẠI</a></li>
-                                <li><a href=""><i class="fa fa-trash"></i>XÓA THỂ LOẠI</a></li>
-                                <li><a href=""><i class="fa fa-undo"></i>PHỤC HỒI THỂ LOẠI</a></li>
-                        </ul>
+        <nav class="navbar-default navbar-static-side" role="navigation">
+            <div class="sidebar-collapse">
+                <ul class="nav metismenu" id="side-menu">
+                    <li class="nav-header">
+                        <div id="Th_Nguoi_dung"></div>  
                     </li>
-                    <li>
-                            <a href=""><i class="fa fa-user"></i> <span class="nav-label">QUẢN LÝ TÁC GIẢ</span> <span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level collapse">
-                                    <li><a href="MH_Chinh_Tac_gia_Admin.html"><i class="fa fa-home"></i>TRANG CHỦ TÁC GIẢ</a></li>
-                                    <li><a href=""><i class="fa fa-plus"></i>THÊM TÁC GIẢ</a></li>
-                                    <li><a href=""><i class="fa fa-edit"></i>SỬA TÁC GIẢ</a></li>
-                                    <li><a href=""><i class="fa fa-trash"></i>XÓA TÁC GIẢ</a></li>
-                                    <li><a href=""><i class="fa fa-undo"></i>PHỤC HỒI TÁC GIẢ</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                                <a href=""><i class="fa fa-car"></i> <span class="nav-label">QUẢN LÝ NHÀ PHÁT HÀNH</span> <span class="fa arrow"></span></a>
-                                <ul class="nav nav-second-level collapse">
-                                        <li><a href="MH_Chinh_Nha_phat_hanh_Admin.html"><i class="fa fa-home"></i>TRANG CHỦ NHÀ PHÁT HÀNH</a></li>
-                                        <li><a href=""><i class="fa fa-plus"></i>THÊM NHÀ PHÁT HÀNH</a></li>
-                                        <li><a href=""><i class="fa fa-edit"></i>SỬA NHÀ PHÁT HÀNH</a></li>
-                                        <li><a href=""><i class="fa fa-trash"></i>XÓA NHÀ PHÁT HÀNH</a></li>
-                                        <li><a href=""><i class="fa fa-undo"></i>PHỤC HỒI NHÀ PHÁT HÀNH</a></li>
-                                </ul>
-                            </li>
-            </ul>
-        </div>
-    </nav>
+                    <li><a href="MH_Chinh_Sach_Admin.html"><i class="fa fa-book"></i><span class="nav-label">TRANG CHỦ SÁCH</span></a></li>
+                    <li><a href="MH_Chinh_The_loai_Admin.html"><i class="fa fa-list-alt"></i><span class="nav-label">TRANG CHỦ THỂ LOẠI</span></a></li>
+                    <li><a href="MH_Chinh_Tac_gia_Admin.html"><i class="fa fa-user"></i><span class="nav-label">TRANG CHỦ TÁC GIẢ</span></a></li>
+                    <li><a href="MH_Chinh_Nha_phat_hanh_Admin.html"><i class="fa fa-car"></i><span class="nav-label">TRANG CHỦ NHÀ PHÁT HÀNH</span></a></li>
+                </ul>
+            </div>
+        </nav>
 
         <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
