--- a/Ung_dung_Quan_ly/Giao_dien/MH_Phuc_hoi_The_loai.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Phuc_hoi_The_loai.html
@@ -86,7 +86,7 @@
         }
 
         Th_Bo_qua.onclick = () => {
-            window.location = "MH_Danh_sach_The_loai.html"
+            window.location = "MH_Danh_sach_The_loai_Admin.html"
         }
 
     </script>
