--- a/Ung_dung_Quan_ly/Giao_dien/MH_Quan_ly_tam_thoi.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Quan_ly_tam_thoi.html
@@ -29,8 +29,8 @@
         Th_Tac_gia.onclick = () => {
             window.location = 'MH_Chinh_Tac_gia.html'
         }
-        Th_Nhà_phat_hanh.onclick = () => {
-            window.location = 'MH_Chinh_Nha_phat_hanh.html'
+        Th_Nha_phat_hanh.onclick = () => {
+            window.location = 'MH_Chinh_Nha_phat_hanh_Admin.html'
         }
     </script>
 </body>
