--- a/Ung_dung_Quan_ly/Giao_dien/MH_Xoa_Sach.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Xoa_Sach.html
@@ -84,7 +84,7 @@
 
         Th_Bo_qua.onclick = () => {
             sessionStorage.removeItem("Danh_sach_Chon")
-            window.location = "MH_Danh_sach_Sach.html"
+            window.location = "MH_Danh_sach_Sach_Admin.html"
         }
 
     </script>
