--- a/Ung_dung_Quan_ly/Giao_dien/MH_Phuc_hoi_Tac_gia_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Phuc_hoi_Tac_gia_Admin.html
@@ -86,7 +86,7 @@
         }
 
         Th_Bo_qua.onclick = () => {
-            window.location = "MH_Danh_sach_Tac_gia.html"
+            window.location = "MH_Danh_sach_Tac_gia_Admin.html"
         }
 
     </script>
