--- a/Ung_dung_Quan_ly/Giao_dien/MH_Sua_Tac_gia.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Sua_Tac_gia.html
@@ -96,7 +96,7 @@
 
         Th_Bo_qua.onclick = () => {
             sessionStorage.removeItem("Danh_sach_Chon")
-            window.location = "MH_Danh_sach_Tac_gia.html"
+            window.location = "MH_Danh_sach_Tac_gia_Admin.html"
         }
 
     </script>
