--- a/Ung_dung_Quan_ly/Giao_dien/MH_Them_Tac_gia.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Them_Tac_gia.html
@@ -139,7 +139,7 @@
         }
 
         Th_Bo_qua.onclick = () => {
-            window.location = "MH_Danh_sach_Sach.html"
+            window.location = "MH_Danh_sach_Sach_Admin.html"
         }
     </script>
 </body>
