--- a/Ung_dung_Quan_ly/Giao_dien/MH_Them_The_loai.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Them_The_loai.html
@@ -138,7 +138,7 @@
         }
 
         Th_Bo_qua.onclick = () => {
-            window.location = "MH_Danh_sach_Sach.html"
+            window.location = "MH_Danh_sach_Sach_Admin.html"
         }
     </script>
 </body>
