--- a/Ung_dung_Quan_ly/MH_Old/MH_Danh_sach_Sach.html
+++ b/Ung_dung_Quan_ly/MH_Old/MH_Danh_sach_Sach.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Cửa hàng Điện thoại</title>
+    <title>Cửa hàng Sách</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
-    .CHONCHON {
+    .CHON {
         border: 1px solid blue;
         opacity: 0.5;
     }
