fix giao dien admin update

--- a/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Sach_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Sach_Admin.html
@@ -23,7 +23,6 @@
 </head>
 
 <body class="">
-
     <div id="wrapper">
         <nav class="navbar-default navbar-static-side" role="navigation">
             <div class="sidebar-collapse">
@@ -94,22 +93,16 @@
                 </div>
             </div>
 
-
             <div class="wrapper wrapper-content">
                 <div class="container-fluid">
                     <iframe id="Khung_Chuc_nang"></iframe>
                 </div>
             </div>
             <div class="footer">
-                <div class="pull-right">
-                    10GB of
-                    <strong>250GB</strong> Free.
-                </div>
                 <div>
-                    <strong>Copyright</strong> Example Company &copy; 2014-2017
+                    <strong>Trang quản trị sách Admin | 2018</strong>
                 </div>
             </div>
-
         </div>
     </div>
     <!-- Mainly scripts -->
