--- a/Ung_dung_Quan_ly/Xu_ly/code_tam.html
+++ b/Ung_dung_Quan_ly/Xu_ly/code_tam.html
@@ -1,88 +1,43 @@
-<div  style="width:30rem; margin:auto; padding:10px" id="Th_Khung_Dang_nhap" class="table-bordered">
+<div class="row CAP_NHAP" Ma_so="${Sach.Ma_so}">
+    <div class="form col-md-6">
         <div class="form-group">
-          <label for="Th_Ten_Dang_nhap">Tên đăng nhập</label>
-          <input type="text" class="form-control" id="Th_Ten_Dang_nhap" placeholder="Nhập Tên đăng nhập" value="QL_1">
+            <label for="Th_Ten">Tên Sách</label>
+            <input type="text" class="form-control" id="Th_Ten" value="${Sach.Ten}" placeholder="Nhập Tên Sách">
         </div>
         <div class="form-group">
-          <label for="Th_Mat_khau">Mật khẩu</label>
-          <input type="password" class="form-control" id="Th_Mat_khau" placeholder="Nhập mật khẩu" value="QL_1">
+            <label for="Th_Ma_so">Mã số Sách</label>
+            <input type="text" class="form-control" id="Th_Ma_so" value="${Sach.Ma_so}" readonly>
         </div>
-        <button type="button" class="btn btn-primary" id="Th_Dang_nhap">Đăng nhập</button>
-      </div>
+        <div class="form-group">
+            <label for="Th_Don_gia_Ban">Đơn giá Bán</label>
+            <input type="text" class="form-control" id="Th_Don_gia_Ban" value="${Sach.Don_gia_Ban}" placeholder="Nhập Đơn giá Bán">
+        </div>
+        <div class="form-group">
+            <label for="Th_Mo_ta">Mô tả</label>
+            <textarea class="form-control" id="Th_Mo_ta" placeholder="Nhập mô tả">${Sach.Mo_ta}</textarea>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="form-group">
+            <label for="Th_Nhom_The_loai">Thể loại</label>
+            <input type="text" class="form-control" id="Th_The_loai" value="${Nhom.Ten_the_loai}" readonly>
+            <select id="Th_Nhom_The_loai" onchange="Lay_Ma_so_cuoi_The_loai()">
 
-      <!-- code -->
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="Th_Nhom_Tac_gia">Tác giả</label>
+            <input type="text" class="form-control" id="Th_Tac_gia" value="${Nhom.Tac_gia}" readonly>
+            <select id="Th_Nhom_Tac_gia" onchange="Lay_Ma_so_cuoi_Tac_gia()">
 
-      <div class="row">
-          <div class="col-lg-4">
-              <div class="contact-box">
-                  <a href="profile.html">
-                  <div class="col-sm-4">
-                      <div class="text-center">
-                          <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a2.jpg">
-                          <div class="m-t-xs font-bold">Graphics designer</div>
-                      </div>
-                  </div>
-                  <div class="col-sm-8">
-                      <h3><strong>John Smith</strong></h3>
-                      <p><i class="fa fa-map-marker"></i> Riviera State 32/106</p>
-                      <address>
-                          <strong>Twitter, Inc.</strong><br>
-                          795 Folsom Ave, Suite 600<br>
-                          San Francisco, CA 94107<br>
-                          <abbr title="Phone">P:</abbr> (123) 456-7890
-                      </address>
-                  </div>
-                  <div class="clearfix"></div>
-                      </a>
-              </div>
-          </div>
-          <div class="col-lg-4">
-              <div class="contact-box">
-                  <a href="profile.html">
-                  <div class="col-sm-4">
-                      <div class="text-center">
-                          <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a1.jpg">
-                          <div class="m-t-xs font-bold">CEO</div>
-                      </div>
-                  </div>
-                  <div class="col-sm-8">
-                      <h3><strong>Alex Johnatan</strong></h3>
-                      <p><i class="fa fa-map-marker"></i> Riviera State 32/106</p>
-                      <address>
-                          <strong>Twitter, Inc.</strong><br>
-                          795 Folsom Ave, Suite 600<br>
-                          San Francisco, CA 94107<br>
-                          <abbr title="Phone">P:</abbr> (123) 456-7890
-                      </address>
-                  </div>
-                  <div class="clearfix"></div>
-                      </a>
-              </div>
-          </div>
-          <div class="col-lg-4">
-              <div class="contact-box">
-                  <a href="profile.html">
-                  <div class="col-sm-4">
-                      <div class="text-center">
-                          <img alt="image" class="img-circle m-t-xs img-responsive" src="img/a3.jpg">
-                          <div class="m-t-xs font-bold">Marketing manager</div>
-                      </div>
-                  </div>
-                  <div class="col-sm-8">
-                      <h3><strong>Monica Smith</strong></h3>
-                      <p><i class="fa fa-map-marker"></i> Riviera State 32/106</p>
-                      <address>
-                          <strong>Twitter, Inc.</strong><br>
-                          795 Folsom Ave, Suite 600<br>
-                          San Francisco, CA 94107<br>
-                          <abbr title="Phone">P:</abbr> (123) 456-7890
-                      </address>
-                  </div>
-                  <div class="clearfix"></div>
-                      </a>
-              </div>
-          </div>
-      </div>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="Th_Nhom_Nha_phat_hanh">Nhà phát hành</label>
+            <input type="text" class="form-control" id="Th_Nha_phat_hanh" value="${Nhom.Nha_phat_hanh}" readonly>
+            <select id="Th_Nhom_Nha_phat_hanh" onchange="Lay_Ma_so_cuoi_Nha_phat_hanh()">
 
-
-      ${The_loai.Ten_the_loai}
+            </select>
+        </div>
+    </div>
+</div>
