cap nhap giao dien admin

--- a/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Nha_phat_hanh_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Nha_phat_hanh_Admin.html
@@ -66,8 +66,9 @@
                             </div>
                             <ul class="nav navbar-top-links navbar-right">
                                 <li>
-                                    <span class="m-r-sm text-muted welcome-message">
-                                        <i class="fa fa-bell"></i>Chào mừng bạn đến với trang Quản lý</span>
+                                    <span class="welcome-message">
+                                        <i class="fa fa-bell"></i> Chào mừng bạn đến với trang Quản lý
+                                    </span>
                                 </li>
                                 <li>
                                     <button type="button" class="btn btn-outline-danger" id="Th_Thoat" onclick="XL_Thoat_Dang_nhap()">
