--- a/Ung_dung_Quan_ly/Giao_dien/MH_Dang_nhap_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Dang_nhap_Admin.html
@@ -14,7 +14,7 @@
 <body class="gray-bg">
     <div class="loginColumns animated fadeInDown">
         <div class="row">
-            <div class="text-center text-danger" id="Th_Thong_bao">
+            <div class="alert alert-success text-center" id="Th_Thong_bao">
                 KHUNG THÔNG BÁO
             </div>
 
