--- a/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Sach_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Chinh_Sach_Admin.html
@@ -8,7 +8,7 @@
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/my_custom.css">
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
@@ -67,8 +67,9 @@
                     </div>
                     <ul class="nav navbar-top-links navbar-right">
                         <li>
-                            <span class="m-r-sm text-muted welcome-message">
-                                <i class="fa fa-bell"></i>Chào mừng bạn đến với trang Quản lý</span>
+                            <span class="welcome-message">
+                                <i class="fa fa-bell"></i> Chào mừng bạn đến với trang Quản lý
+                            </span>
                         </li>
                         <li>
                             <button type="button" class="btn btn-outline-danger" id="Th_Thoat" onclick="XL_Thoat_Dang_nhap()">
