--- a/Ung_dung_Quan_ly/Giao_dien/MH_Danh_sach_Nha_phat_hanh_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Danh_sach_Nha_phat_hanh_Admin.html
@@ -66,7 +66,7 @@
                     The_hien.childNodes[0].classList.toggle("CHON")
                 }
             });
-            Th_Thong_bao.innerHTML = `<h2 style="color:#fff;">Danh sách có ${Danh_sach_Nha_phat_hanh.length} Nhà phát hành</h2>`
+            Th_Thong_bao.innerHTML = `<h2 class"book-notification" style="color:white">Danh sách có ${Danh_sach_Nha_phat_hanh.length} Nhà phát hành</h2>`
         }
           
     </script>
