--- a/Ung_dung_Quan_ly/Giao_dien/MH_Danh_sach_Tac_gia_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Danh_sach_Tac_gia_Admin.html
@@ -35,12 +35,12 @@
     <!-- Mainly scripts -->
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <!-- <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script> -->
 
     <!-- Custom and plugin javascript -->
-    <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
+    <!-- <script src="js/inspinia.js"></script>
+    <script src="js/plugins/pace/pace.min.js"></script> -->
     <script src="../Xu_ly/Xu_ly_3L.js"></script>
 
     <script>
@@ -66,7 +66,7 @@
                     The_hien.childNodes[0].classList.toggle("CHON")
                 }
             });
-            Th_Thong_bao.innerHTML = `<h2 style="color:#fff;">Danh sách Tác giả (${Danh_sach_Tac_gia.length}) </h2>`
+            Th_Thong_bao.innerHTML = `<h2 style="color:#fff;">Danh sách có ${Danh_sach_Tac_gia.length} tác giả</h2>`
         }
           
     </script>
