--- a/Ung_dung_Quan_ly/Giao_dien/MH_Danh_sach_The_loai_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Danh_sach_The_loai_Admin.html
@@ -35,12 +35,6 @@
     <!-- Mainly scripts -->
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
-    <script src="js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
-
-    <!-- Custom and plugin javascript -->
-    <script src="js/inspinia.js"></script>
-    <script src="js/plugins/pace/pace.min.js"></script>
     <script src="../Xu_ly/Xu_ly_3L.js"></script>
 
     <script>
@@ -66,7 +60,7 @@
                     The_hien.childNodes[0].classList.toggle("CHON")
                 }
             });
-            Th_Thong_bao.innerHTML = `<h2 style="color:#fff;">Danh sách Thể loại (${Danh_sach_The_loai.length}) </h2>`
+            Th_Thong_bao.innerHTML = `<h2 style="color:#fff;">Danh sách có ${Danh_sach_The_loai.length} Thể loại </h2>`
         }
           
     </script>
