--- a/Ung_dung_Quan_ly/Giao_dien/MH_Them_Tac_gia_Admin.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Them_Tac_gia_Admin.html
@@ -1,47 +1,36 @@
-<!doctype html>
-<html lang="en">
+html lang="en">
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
+    <title>Sách</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link rel="stylesheet" href="css/my_custom.css">
 </head>
 
 <body>
-    <div class="container-fluid btn">
-        <div class="float-left">
+    <div class="container">
+        <div class="row book-mt10">
             <button type="button" class="btn btn-success" id="Th_Dong_y">
                 Đồng ý
             </button>
-
             <button type="button" class="btn btn-danger" id="Th_Bo_qua">
                 Bỏ qua
             </button>
-
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
-            THÊM TÁC GIẢ MỚI
+
+    <div class="container">
+        <div class="alert alert-success text-center book-mt10" id="Th_Thong_bao">
+            THÊM TÁC GIẢ
         </div>
     </div>
     <div class="container-fluid">
         <div class="row" id="Th_Cha"></div>
     </div>
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
     <script src="../Xu_ly/Xu_ly_3L.js"></script>
     <script>
         var Du_lieu = Doc_Danh_sach_Tac_gia();
@@ -49,23 +38,6 @@
         var Danh_sach_Xoa_Tac_gia = Doc_Danh_sach_Xoa_Tac_gia().Danh_sach_Xoa_Tac_gia
         Tao_The_hien_Them_Tac_gia(Th_Cha)
         Th_Nhom_Tac_gia.onchange()
-
-        // function XL_Ghi_Media() {
-
-        //     // //console.log(Th_file.files[0])
-        //     var reader = new FileReader()
-        //     var Chuoi_nhi_phan = ""
-        //     var Ten = "temp.png"
-        //     var Kq = ""
-        //     reader.onload = function (e) {
-        //         Chuoi_nhi_phan = e.target.result;
-        //         var Doi_tuong = { "Ten": Ten, "Chuoi_nhi_phan": Chuoi_nhi_phan }
-        //         Kq = Ghi_Media(Doi_tuong)
-        //     }
-        //     reader.readAsDataURL(Th_file.files[0])
-        //     return Kq
-        // }
-        // Xử lý lấy mã số cuối
 
         function Lay_Ma_so_cuoi_Tac_gia() {
             Nhom_Tac_gia = Th_Nhom_Tac_gia.value;
@@ -96,7 +68,6 @@
             var reader = new FileReader();
             reader.onload = function (e) {
                 Th_Hinh_Xem_truoc.src = e.target.result;
-                //console.log(e.target.result)
             }
             reader.readAsDataURL(Th_file.files[0]);
 
@@ -112,25 +83,13 @@
                 "Tac_gia": Ten,
                 "Mo_ta_tac_gia": Mo_ta
             }
-          
+
             var Tac_gia = Ghi_Tac_gia_Moi(Tac_gia)
             if (Tac_gia) {
                 Du_lieu.Danh_sach_Tac_gia.push(Tac_gia)
-
-                // // // Cập nhật Media
-                // var reader = new FileReader()
-                // var Chuoi_nhi_phan = ""
-                // var Ten_Hinh = `${Ma_so}.png`
-                // reader.onload = function (e) {
-                //     Chuoi_nhi_phan = e.target.result;
-                //     var Doi_tuong = { "Ten": Ten_Hinh, "Chuoi_nhi_phan": Chuoi_nhi_phan }
-                //     Kq = Ghi_Media(Doi_tuong)
-                // }
-                // reader.readAsDataURL(Th_file.files[0])
             }
-
         }
-        
+
         Th_Dong_y.onclick = () => {
             var Kq = XL_Ghi_Them_Tac_gia()
             if (Kq == "OK") {
