--- a/Ung_dung_Quan_ly/Giao_dien/MH_Xoa_Sach.html
+++ b/Ung_dung_Quan_ly/Giao_dien/MH_Xoa_Sach.html
@@ -2,33 +2,34 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
+    <title>Sách</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+  <link rel="stylesheet" href="css/my_custom.css">
 </head>
 
 <body>
-    <div class="container-fluid btn">
-        <div class="float-left">
+    <div class="container">
+        <div class="row book-mt10">
             <button type="button" class="btn btn-success" id="Th_Dong_y">
                 Đồng ý
             </button>
-
             <button type="button" class="btn btn-danger" id="Th_Bo_qua">
                 Bỏ qua
             </button>
         </div>
     </div>
-    <div class="container-fluid">
-        <div class="btn btn-outline-danger btn-block" id="Th_Thong_bao">
-            XÓA Sách
+
+    <div class="container">
+        <div class="alert alert-success text-center book-mt10" id="Th_Thong_bao">
+            XOÁ SÁCH
         </div>
     </div>
-    <div class="container-fluid">
+
+    <div class="container">
         <div class="row" id="Th_Cha">
 
         </div>
@@ -38,27 +39,19 @@
     <script src="../Xu_ly/Xu_ly_3L.js"></script>
     <script>
         Danh_sach_Cap_nhat = JSON.parse(sessionStorage.getItem("Danh_sach_Chon"))
-        //console.log(Danh_sach_Cap_nhat)
         Tao_The_hien_Xoa_Sach(Th_Cha, Danh_sach_Cap_nhat)
-
         function XL_Xoa_Sach() {
             var Danh_sach_Cap_nhat = document.querySelectorAll(".CAP_NHAP")
-
             var Danh_sach = []
             Danh_sach_Cap_nhat.forEach(Sach => {
-
                 var Ma_so = Sach.getAttribute("Ma_so")
                 var Sach_Xoa = {
                     "Ma_so": Ma_so,
                 }
                 Danh_sach.push(Sach_Xoa)
             })
-
-            //console.log(Danh_sach)
-            // Ghi Sửa  Điện thoai
             var Kq = Ghi_Xoa_Sach(Danh_sach)
-            return Kq
-            
+            return Kq  
         }
 
         Th_Dong_y.onclick = () => {
@@ -67,9 +60,7 @@
             if (Kq == "OK") {
                 Th_Thong_bao.innerHTML = "Xóa thành công Sách";
                 sessionStorage.removeItem("Danh_sach_Chon")
-
             }
-
         }
 
         Th_Bo_qua.onclick = () => {
@@ -79,5 +70,4 @@
 
     </script>
 </body>
-
 </html>
